--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,31 +9,6 @@
   box-shadow: inset var(--field-shadow);
 }
 
-@keyframes pageTransition {
-  from {
-    scale: 0.95;
-    opacity: 0;
-  }
-
-  to {
-    scale: 1;
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  0% {
-    scale: 1;
-    opacity: 1;
-  }
-
-  100% {
-    scale: 0.95;
-    opacity: 0;
-  }
-}
-
-
 body.fade-out {
   main {
     animation: fadeOut 0.3s ease-in-out;
@@ -43,15 +18,12 @@ body.fade-out {
 
 main {
   display: flex;
-  /* FIX LATER */
-  /* justify-content: center; */
   align-items: center;
   flex-direction: column;
   overflow-y: auto;
   margin: auto 0;
-  /* height: 100%; */
-  padding: calc(var(--spacing) * 4) var(--spacing);
-  animation: pageTransition 0.5s ease-in-out;
+  padding: calc(var(--spacing) * 2) var(--spacing);
+  animation: pageIn 0.5s ease-in-out;
 
   &:has(.chat-box) {
     padding-top: 0;
@@ -166,5 +138,33 @@ header {
         overflow-x: auto;
       }
     }
+  }
+}
+
+
+
+/* Animations */
+
+@keyframes pageIn {
+  from {
+    scale: 0.95;
+    opacity: 0;
+  }
+
+  to {
+    scale: 1;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    scale: 1;
+    opacity: 1;
+  }
+
+  100% {
+    scale: 0.95;
+    opacity: 0;
   }
 }
