--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,18 +85,19 @@ header {
 
 
 .banner-button {
+  position: absolute;
+  top: 63px;
+  right: var(--spacing);
   float: right;
   padding: 0 var(--spacing);
-  font-size: 1em;
   --color: var(--primary);
   margin-right: var(--spacing);
   margin-top: var(--spacing);
   border-radius: calc(var(--spacing) * 4);
-  /* aspect-ratio: 1 / 1; */
+  aspect-ratio: 1 / 1;
 
   &>span {
     display: block;
-    /* scale: 2 !important; */
   }
 }
 
