--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -24,8 +24,9 @@
 
   --red: color-mix(in srgb, red, var(--fg1) 25%);
 
-  --monospace: "Fira Code", "JetBrains Mono", "Source Code Pro", "Hack", "Ubuntu Mono",
-    "DejaVu Sans Mono", "Monoid", "Inconsolata", "Courier New", monospace;
+  --monospace:
+    'Fira Code', 'JetBrains Mono', 'Source Code Pro', 'Hack', 'Ubuntu Mono', 'DejaVu Sans Mono',
+    'Monoid', 'Inconsolata', 'Courier New', monospace;
 }
 
 .theme-light {
@@ -98,7 +99,18 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   height: 100%;
   background: var(--bg1);
   color: var(--fg2);
@@ -146,7 +158,7 @@ label:has(+ :is(button, input, select, textarea, .textarea-container)) {
   margin-bottom: calc(var(--spacing) / 2);
   color: var(--fg3);
 
-  &+* {
+  & + * {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -158,8 +170,8 @@ label:has(input[type='radio'], input[type='checkbox']) {
   margin: var(--spacing) 0;
 
   input {
-    margin: .1em;
-    margin-right: calc(var(--spacing)/2);
+    margin: 0.1em;
+    margin-right: calc(var(--spacing) / 2);
     font-size: 2em;
     scale: 1.4;
   }
@@ -233,9 +245,23 @@ button {
 
 /* Inputs */
 
-:is(input:not([type]),
-  input:is([type='text'], [type='password'], [type='email'], [type='number'], [type='url'], [type='tel'], [type='search'], [type='date'], [type='file'], [type='color']), select,
-  textarea) {
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
+    [type='password'],
+    [type='email'],
+    [type='number'],
+    [type='url'],
+    [type='tel'],
+    [type='search'],
+    [type='date'],
+    [type='file'],
+    [type='color']
+  ),
+  select,
+  textarea
+) {
   max-width: 100%;
   padding: calc(var(--spacing)) calc(var(--spacing) * 2);
   border: var(--border-width) solid var(--border-color);
@@ -261,11 +287,12 @@ button {
   }
 }
 
-:is(input, button, select, a, .textarea-container)+:is(input, button, select, a, .textarea-container) {
+:is(input, button, select, a, .textarea-container)
+  + :is(input, button, select, a, .textarea-container) {
   margin-left: var(--spacing);
 }
 
-:is(button, select)~a {
+:is(button, select) ~ a {
   padding: var(--spacing);
 }
 
@@ -305,16 +332,16 @@ a {
 .error-message {
   color: var(--red);
   margin: var(--spacing) 0;
-  animation: fadeIn .5s ease-in-out;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 .message {
   margin: var(--spacing) 0;
-  animation: fadeIn .5s ease-in-out;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select)+ :is(.message, .error-message) {
+:is(button, input, select) + :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -369,8 +396,6 @@ main img {
   animation: spin 1s infinite linear;
 }
 
-
-
 /* Blockquote */
 
 blockquote {
@@ -409,7 +434,7 @@ pre {
 
 /* Other */
 
-[data-hide="true"] {
+[data-hide='true'] {
   display: none;
 }
 
@@ -420,7 +445,6 @@ pre {
     transform: rotate(1turn);
   }
 }
-
 
 @keyframes fadeIn {
   0% {
