--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,44 @@
+/* Variables */
+
+:root {
+  --content-width: 880px;
+}
+
+
+/* Page Transitions */
+
+body.fade-out {
+  main {
+    animation: fadeOut 0.3s ease-in-out;
+    opacity: 0;
+  }
+}
+
+body:not(.fade-out) {
+  main {
+    animation: pageIn 0.5s ease-in-out;
+  }
+}
+
+/* Page */
+
+main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  overflow-y: auto;
+  margin: auto 0;
+  padding: calc(var(--spacing) * 2) var(--spacing);
+  max-width: var(--content-width);
+
+
+  &:has(.chat-box) {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 100%;
+  }
+}
+
 .container {
   border: 10px solid var(--primary);
   border-radius: calc(var(--radius) * 8);
@@ -9,28 +50,7 @@
   box-shadow: inset var(--field-shadow);
 }
 
-body.fade-out {
-  main {
-    animation: fadeOut 0.3s ease-in-out;
-    opacity: 0;
-  }
-}
-
-main {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  overflow-y: auto;
-  margin: auto 0;
-  padding: calc(var(--spacing) * 2) var(--spacing);
-  animation: pageIn 0.5s ease-in-out;
-
-  &:has(.chat-box) {
-    padding-top: 0;
-    padding-bottom: 0;
-    height: 100%;
-  }
-}
+/* Header */
 
 header {
   display: flex;
@@ -46,6 +66,7 @@ header {
     align-items: center;
   }
 
+  /* Remove bottom border if there is a banner */
   &:has(+ .banner) {
     border-bottom: none;
   }
@@ -58,6 +79,8 @@ header {
     margin-right: var(--spacing);
   }
 }
+
+/* Banner */
 
 .banner {
   text-align: center;
@@ -95,16 +118,17 @@ header {
   border-radius: calc(var(--spacing) * 4);
   aspect-ratio: 1 / 1;
 
-  & > span {
+  &>span {
     display: block;
   }
 }
+
+/* Chat Box */
 
 .chat-box {
   overflow: hidden;
   height: 100%;
   flex: 1;
-  width: 880px;
   max-width: 100%;
   display: flex;
   flex-direction: column;
