--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,6 +35,7 @@ main {
     padding-top: 0;
     padding-bottom: 0;
     height: 100%;
+    width: 100%;
   }
 }
 
@@ -119,7 +120,7 @@ header {
   border-radius: calc(var(--spacing) * 4);
   aspect-ratio: 1 / 1;
 
-  & > span {
+  &>span {
     display: block;
   }
 }
@@ -128,6 +129,7 @@ header {
 
 .chat-box {
   overflow: hidden;
+  width: 100%;
   height: 100%;
   flex: 1;
   max-width: 100%;
