--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -158,7 +158,7 @@ label:has(+ :is(button, input, select, textarea, .textarea-container)) {
   margin-bottom: calc(var(--spacing) / 2);
   color: var(--fg3);
 
-  &+* {
+  & + * {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -245,8 +245,10 @@ button {
 
 /* Inputs */
 
-:is(input:not([type]),
-  input:is([type='text'],
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -255,9 +257,11 @@ button {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']),
+    [type='color']
+  ),
   select,
-  textarea) {
+  textarea
+) {
   max-width: 100%;
   padding: calc(var(--spacing)) calc(var(--spacing) * 2);
   border: var(--border-width) solid var(--border-color);
@@ -283,11 +287,11 @@ button {
   }
 }
 
-:is(input, button, select, a, .textarea-container)+ :is(input, button, select, a, .textarea-container) {
+:is(input, button, select, a, .textarea-container) + :is(input, button, select, a, .textarea-container) {
   margin-left: var(--spacing);
 }
 
-:is(button, select)~a {
+:is(button, select) ~ a {
   padding: var(--spacing);
 }
 
@@ -332,7 +336,7 @@ a {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select)+ :is(.message, .error-message) {
+:is(button, input, select) + :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
