--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -56,6 +56,8 @@ The code is easy to read, but some variables, such as `--transition`, are not cl
   --border-color: var(--bg3);
   --border-width: 1px;
   --spacing: 10px;
+  --spacing-05: calc(var(--spacing) * 0.5);
+  --spacing-2: calc(var(--spacing) * 2);
   --transition: 0.2s ease-in-out;
   --field-shadow: 0 1px 4px #0002;
 
@@ -168,8 +170,8 @@ body {
 
 :is(h1, h2, h3, h4, h5) {
   color: var(--fg1);
-  margin-top: calc(var(--spacing) * 2);
-  margin-bottom: calc(var(--spacing));
+  margin-top: var(--spacing-2);
+  margin-bottom: var(--spacing);
   text-wrap: balance;
 }
 
@@ -189,13 +191,12 @@ p {
 /* Fields */
 
 label:has(+ :is(button, input, select, textarea, .textarea-container)) {
-  margin-bottom: calc(var(--spacing) / 3);
   display: block;
   margin-top: var(--spacing);
-  margin-bottom: calc(var(--spacing) / 2);
+  margin-bottom: var(--spacing-05);
   color: var(--fg3);
 
-  & + * {
+  &+* {
     margin-bottom: var(--spacing);
     display: block;
   }
@@ -208,7 +209,7 @@ label:has(input[type='radio'], input[type='checkbox']) {
 
   input {
     margin: 0.1em;
-    margin-right: calc(var(--spacing) / 2);
+    margin-right: var(--spacing-05);
     font-size: 2em;
     scale: 1.4;
   }
@@ -216,14 +217,14 @@ label:has(input[type='radio'], input[type='checkbox']) {
 
 form {
   /* So that content not cut off for field transitions */
-  padding: calc(var(--spacing) / 2);
+  padding: var(--spacing-05);
 }
 
 /* divider */
 
 hr {
   border: none;
-  margin: calc(var(--spacing) * 2) 0;
+  margin: var(--spacing-2) 0;
   background-color: var(--bg3);
   border-radius: var(--radius);
   height: 2px;
@@ -252,7 +253,7 @@ button {
   background-color: var(--color);
   border-radius: var(--radius);
   border: none;
-  padding: calc(var(--spacing)) calc(var(--spacing) * 2);
+  padding: var(--spacing) var(--spacing-2);
   cursor: pointer;
   font: inherit;
   font-weight: bold;
@@ -282,10 +283,8 @@ button {
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
@@ -294,13 +293,11 @@ button {
     [type='search'],
     [type='date'],
     [type='file'],
-    [type='color']
-  ),
+    [type='color']),
   select,
-  textarea
-) {
+  textarea) {
   max-width: 100%;
-  padding: calc(var(--spacing)) calc(var(--spacing) * 2);
+  padding: var(--spacing) var(--spacing-2);
   border: var(--border-width) solid var(--border-color);
   border-radius: var(--radius);
   background-color: var(--bg2);
@@ -324,11 +321,11 @@ button {
   }
 }
 
-:is(input, button, select, a, .textarea-container) + :is(input, button, select, a, .textarea-container) {
+:is(input, button, select, a, .textarea-container)+ :is(input, button, select, a, .textarea-container) {
   margin-left: var(--spacing);
 }
 
-:is(button, select) ~ a {
+:is(button, select)~a {
   padding: var(--spacing);
 }
 
@@ -373,7 +370,7 @@ a {
 }
 
 /* Spacing when message adjacent */
-:is(button, input, select) + :is(.message, .error-message) {
+:is(button, input, select)+ :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -432,7 +429,7 @@ main img {
 
 blockquote {
   padding-left: var(--spacing);
-  margin: calc(var(--spacing) * 2) 0;
+  margin: var(--spacing-2);
   font-style: italic;
   color: var(--fg3);
   position: relative;
@@ -443,7 +440,7 @@ blockquote {
 
 code {
   background-color: var(--bg2);
-  padding: calc(var(--spacing) / 2) var(--spacing);
+  padding: var(--spacing-2) var(--spacing);
   border-radius: var(--radius);
   font-family: var(--monospace);
   white-space: pre-wrap;
